# cuburn-hs

./: .hgignore  README.md  cuburn.cabal
src/: Flam3.hsc  Main.hs  Matrix.hs  Render.hs  Variations.hs  flam3helpers.c
testdata/: electricsheep.244.01031.flam3  electricsheep.244.10471.flam3  electricsheep.244.22018.flam3  electricsheep.244.23669.flam3  electricsheep.244.32737.flam3  electricsheep.244.33532.flam3  sierpinski.flame
