Name:                cuburn
Version:             0.1
-- Synopsis:
-- Description:
License:             GPL-3
License-file:        LICENSE
Author:              Steven Robertson
Maintainer:          steven@strobe.cc
-- Copyright:
Category:            Graphics
Build-type:          Simple
-- Extra-source-files:
Cabal-version:       >=1.2

Executable cuburn
  Main-is:          Main.hs
  Build-depends:    base > 3
                    , random
                    , transformers
                    , GLUT
                    , StateVar
                    , SG
                    , vector
                    , bytestring
                    , pretty-show
  Include-dirs:     /usr/include/libxml2
  C-sources:        src/flam3helpers.c
  Extra-libraries:  flam3, xml2
  Hs-Source-Dirs:   src
  Other-modules:    Flam3
  Build-tools:      hsc2hs
  Ghc-options:      -O2
  Ghc-prof-options: -auto-all -O2 -rtsopts -prof

